// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot when no financial sources data, but reported no income/assets 1`] = `
<React.Fragment>
  <ForwardRef(render)>
    Confirm Income and Assets
  </ForwardRef(render)>
  <ForwardRef(render)>
    Easy, right? Now just review the info below.
  </ForwardRef(render)>
  <Capsule
    buttonLabel="Add an Income Source"
    expansionPanel={
      <React.Fragment>
        <div
          className="css-19cyq23"
        >
          <div
            className="css-mt9voc"
          >
            $0
             Total Annual Income
          </div>
          <p
            className="css-1pqho16"
          >
            $40,000
             is the recommended household income.
            <SimplePopover
              text="It’s recommended that the yearly combined income of all applicants be 40x the monthly rent."
            >
              <UNDEFINED
                classes={
                  Object {
                    "root": "css-bmph1p",
                  }
                }
                style={
                  Object {
                    "color": "#828796",
                    "width": 16,
                  }
                }
              />
            </SimplePopover>
          </p>
        </div>
        <ExistingItemsExpansionPanel
          defaultExpanded={false}
          label="Income Source"
          labelQuantity={0}
        />
      </React.Fragment>
    }
    label="Income"
    limitReached={false}
    name="income"
    prefix={
      <img
        alt="coin"
        src="finance.png"
      />
    }
    route="/income-employment/manual/add-income"
    tip={
      <React.Fragment>
        Proof of legal, verifiable income in an amount equal to 2.0 – 3.0 times the monthly rent per household will be required based on pre-established requirements at the property, along with any necessary supporting documents.
        <br />
        Proof of income includes, but is not limited to, the following:
        <ul>
          <li>
            Proof of current employment (e.g., three most current paystubs within the last 45 or 90 days, depending on the payment cycle);
          </li>
          <li>
            Prior year tax return;
          </li>
          <li>
            Proof of receipt of government income (e.g., social security, disability, welfare, unemployment, etc.);
          </li>
          <li>
            Proof of receipt of retirement and/or investment income;
          </li>
          <li>
            Proof of US based assets;
          </li>
          <li>
            Student loan income;
          </li>
          <li>
            Child/spousal support
          </li>
          <li>
            Any other legal, verifiable income.
          </li>
        </ul>
      </React.Fragment>
    }
  />
  <Capsule
    buttonLabel="Add an Asset"
    expansionPanel={
      <React.Fragment>
        <div
          className="css-19cyq23"
        >
          <div
            className="css-mt9voc"
          >
            $0
             Total Asset Balance
          </div>
          <p
            className="css-1pqho16"
          >
            We’ll take this number into consideration in addition to or in place of income.
          </p>
        </div>
        <ExistingItemsExpansionPanel
          defaultExpanded={false}
          label="Asset"
          labelQuantity={0}
        />
      </React.Fragment>
    }
    label="Assets"
    limitReached={false}
    name="asset"
    prefix={
      <img
        alt="piggy bank"
        src="piggy-bank.png"
      />
    }
    route="/income-employment/manual/add-asset"
    tip={
      <React.Fragment>
        If no current income, proof of liquid assets (which includes bank statements with deposits) at 2.0 – 3.0 the net rent for the entire lease term is required.
      </React.Fragment>
    }
  />
  <ActionButton
    color="primary"
    disabled={false}
    marginBottom={20}
    marginTop={68}
    onClick={[Function]}
    successGreen={false}
    variant="contained"
  >
    Continue
  </ActionButton>
  <BackLink
    to={
      Object {
        "pathname": "/income-employment",
        "state": Object {
          "redirectToFirstPage": true,
        },
      }
    }
  />
</React.Fragment>
`;

exports[`matches snapshot with no financial sources data 1`] = `
<React.Fragment>
  <ForwardRef(render)>
    Income and Asset Verification
  </ForwardRef(render)>
  <ForwardRef(render)>
    Add at least one income source or asset below.
  </ForwardRef(render)>
  <Capsule
    buttonLabel="Add an Income Source"
    expansionPanel={
      <React.Fragment>
        <div
          className="css-19cyq23"
        >
          <div
            className="css-mt9voc"
          >
            $0
             Total Annual Income
          </div>
          <p
            className="css-1pqho16"
          >
            $40,000
             is the recommended household income.
            <SimplePopover
              text="It’s recommended that the yearly combined income of all applicants be 40x the monthly rent."
            >
              <UNDEFINED
                classes={
                  Object {
                    "root": "css-bmph1p",
                  }
                }
                style={
                  Object {
                    "color": "#828796",
                    "width": 16,
                  }
                }
              />
            </SimplePopover>
          </p>
        </div>
        <ExistingItemsExpansionPanel
          defaultExpanded={false}
          label="Income Source"
          labelQuantity={0}
        />
      </React.Fragment>
    }
    label="Income"
    limitReached={false}
    name="income"
    prefix={
      <img
        alt="coin"
        src="finance.png"
      />
    }
    route="/income-employment/manual/add-income"
    tip={
      <React.Fragment>
        Proof of legal, verifiable income in an amount equal to 2.0 – 3.0 times the monthly rent per household will be required based on pre-established requirements at the property, along with any necessary supporting documents.
        <br />
        Proof of income includes, but is not limited to, the following:
        <ul>
          <li>
            Proof of current employment (e.g., three most current paystubs within the last 45 or 90 days, depending on the payment cycle);
          </li>
          <li>
            Prior year tax return;
          </li>
          <li>
            Proof of receipt of government income (e.g., social security, disability, welfare, unemployment, etc.);
          </li>
          <li>
            Proof of receipt of retirement and/or investment income;
          </li>
          <li>
            Proof of US based assets;
          </li>
          <li>
            Student loan income;
          </li>
          <li>
            Child/spousal support
          </li>
          <li>
            Any other legal, verifiable income.
          </li>
        </ul>
      </React.Fragment>
    }
  />
  <Capsule
    buttonLabel="Add an Asset"
    expansionPanel={
      <React.Fragment>
        <div
          className="css-19cyq23"
        >
          <div
            className="css-mt9voc"
          >
            $0
             Total Asset Balance
          </div>
          <p
            className="css-1pqho16"
          >
            We’ll take this number into consideration in addition to or in place of income.
          </p>
        </div>
        <ExistingItemsExpansionPanel
          defaultExpanded={false}
          label="Asset"
          labelQuantity={0}
        />
      </React.Fragment>
    }
    label="Assets"
    limitReached={false}
    name="asset"
    prefix={
      <img
        alt="piggy bank"
        src="piggy-bank.png"
      />
    }
    route="/income-employment/manual/add-asset"
    tip={
      <React.Fragment>
        If no current income, proof of liquid assets (which includes bank statements with deposits) at 2.0 – 3.0 the net rent for the entire lease term is required.
      </React.Fragment>
    }
  />
  <ActionButton
    color="primary"
    disabled={true}
    marginBottom={20}
    marginTop={68}
    onClick={[Function]}
    successGreen={false}
    variant="contained"
  >
    Continue
  </ActionButton>
  <BackLink
    to={
      Object {
        "pathname": "/income-employment",
        "state": Object {
          "redirectToFirstPage": true,
        },
      }
    }
  />
</React.Fragment>
`;

exports[`matches snapshot with only asset sources - with warning 1`] = `
<React.Fragment>
  <ForwardRef(render)>
    Income and Asset Verification
  </ForwardRef(render)>
  <ForwardRef(render)>
    Add at least one income source or asset below.
  </ForwardRef(render)>
  <GenericFormDetail
    messages={
      Array [
        "Oops! We found some issues with one or more of your income/assets sources.",
      ]
    }
    type="error"
  />
  <Capsule
    buttonLabel="Add an Income Source"
    expansionPanel={
      <React.Fragment>
        <div
          className="css-19cyq23"
        >
          <div
            className="css-mt9voc"
          >
            $100,000
             Total Annual Income
          </div>
          <p
            className="css-1pqho16"
          >
            $40,000
             is the recommended household income.
            <SimplePopover
              text="It’s recommended that the yearly combined income of all applicants be 40x the monthly rent."
            >
              <UNDEFINED
                classes={
                  Object {
                    "root": "css-bmph1p",
                  }
                }
                style={
                  Object {
                    "color": "#828796",
                    "width": 16,
                  }
                }
              />
            </SimplePopover>
          </p>
        </div>
        <ExistingItemsExpansionPanel
          defaultExpanded={false}
          label="Income Source"
          labelQuantity={0}
        />
      </React.Fragment>
    }
    label="Income"
    limitReached={false}
    name="income"
    prefix={
      <img
        alt="coin"
        src="finance.png"
      />
    }
    route="/income-employment/manual/add-income"
    tip={
      <React.Fragment>
        Proof of legal, verifiable income in an amount equal to 2.0 – 3.0 times the monthly rent per household will be required based on pre-established requirements at the property, along with any necessary supporting documents.
        <br />
        Proof of income includes, but is not limited to, the following:
        <ul>
          <li>
            Proof of current employment (e.g., three most current paystubs within the last 45 or 90 days, depending on the payment cycle);
          </li>
          <li>
            Prior year tax return;
          </li>
          <li>
            Proof of receipt of government income (e.g., social security, disability, welfare, unemployment, etc.);
          </li>
          <li>
            Proof of receipt of retirement and/or investment income;
          </li>
          <li>
            Proof of US based assets;
          </li>
          <li>
            Student loan income;
          </li>
          <li>
            Child/spousal support
          </li>
          <li>
            Any other legal, verifiable income.
          </li>
        </ul>
      </React.Fragment>
    }
  />
  <Capsule
    buttonLabel="Add an Asset"
    expansionPanel={
      <React.Fragment>
        <div
          className="css-19cyq23"
        >
          <div
            className="css-mt9voc"
          >
            $40,000
             Total Asset Balance
          </div>
          <p
            className="css-1pqho16"
          >
            We’ll take this number into consideration in addition to or in place of income.
          </p>
        </div>
        <ExistingItemsExpansionPanel
          defaultExpanded={true}
          label="Asset"
          labelQuantity={1}
        >
          <IncomeOrAssetsItem
            source={
              Object {
                "adjusted_amount": null,
                "estimated_amount": 40000,
                "id": 125,
                "income_or_asset_type": 510,
                "status": 40,
                "uploaded_documents": Array [],
              }
            }
          />
        </ExistingItemsExpansionPanel>
      </React.Fragment>
    }
    label="Assets"
    limitReached={false}
    name="asset"
    prefix={
      <img
        alt="piggy bank"
        src="piggy-bank.png"
      />
    }
    route="/income-employment/manual/add-asset"
    tip={
      <React.Fragment>
        If no current income, proof of liquid assets (which includes bank statements with deposits) at 2.0 – 3.0 the net rent for the entire lease term is required.
      </React.Fragment>
    }
  />
  <ActionButton
    color="primary"
    disabled={false}
    marginBottom={20}
    marginTop={68}
    onClick={[Function]}
    successGreen={false}
    variant="contained"
  >
    Continue
  </ActionButton>
  <ForwardRef(WithStyles)
    classes={
      Object {
        "root": "css-rf9gj",
      }
    }
    color="primary"
    onClick={[Function]}
  >
    Start Income Verification Over
  </ForwardRef(WithStyles)>
</React.Fragment>
`;

exports[`matches snapshot with some financial sources data - with warnings 1`] = `
<React.Fragment>
  <ForwardRef(render)>
    Income and Asset Verification
  </ForwardRef(render)>
  <ForwardRef(render)>
    Add at least one income source or asset below.
  </ForwardRef(render)>
  <GenericFormDetail
    messages={
      Array [
        "Oops! We found some issues with one or more of your income/assets sources.",
      ]
    }
    type="error"
  />
  <Capsule
    buttonLabel="Add an Income Source"
    expansionPanel={
      <React.Fragment>
        <div
          className="css-19cyq23"
        >
          <div
            className="css-mt9voc"
          >
            $100,000
             Total Annual Income
          </div>
          <p
            className="css-1pqho16"
          >
            $40,000
             is the recommended household income.
            <SimplePopover
              text="It’s recommended that the yearly combined income of all applicants be 40x the monthly rent."
            >
              <UNDEFINED
                classes={
                  Object {
                    "root": "css-bmph1p",
                  }
                }
                style={
                  Object {
                    "color": "#828796",
                    "width": 16,
                  }
                }
              />
            </SimplePopover>
          </p>
        </div>
        <ExistingItemsExpansionPanel
          defaultExpanded={true}
          label="Income Source"
          labelQuantity={2}
        >
          <IncomeOrAssetsItem
            source={
              Object {
                "adjusted_amount": 100020,
                "estimated_amount": 100000,
                "id": 124,
                "income_or_asset_type": 135,
                "status": 40,
                "uploaded_documents": Array [],
              }
            }
          />
          <IncomeOrAssetsItem
            source={
              Object {
                "adjusted_amount": null,
                "estimated_amount": 100000,
                "id": 124,
                "income_or_asset_type": 135,
                "status": 40,
                "uploaded_documents": Array [],
              }
            }
          />
        </ExistingItemsExpansionPanel>
      </React.Fragment>
    }
    label="Income"
    limitReached={false}
    name="income"
    prefix={
      <img
        alt="coin"
        src="finance.png"
      />
    }
    route="/income-employment/manual/add-income"
    tip={
      <React.Fragment>
        Proof of legal, verifiable income in an amount equal to 2.0 – 3.0 times the monthly rent per household will be required based on pre-established requirements at the property, along with any necessary supporting documents.
        <br />
        Proof of income includes, but is not limited to, the following:
        <ul>
          <li>
            Proof of current employment (e.g., three most current paystubs within the last 45 or 90 days, depending on the payment cycle);
          </li>
          <li>
            Prior year tax return;
          </li>
          <li>
            Proof of receipt of government income (e.g., social security, disability, welfare, unemployment, etc.);
          </li>
          <li>
            Proof of receipt of retirement and/or investment income;
          </li>
          <li>
            Proof of US based assets;
          </li>
          <li>
            Student loan income;
          </li>
          <li>
            Child/spousal support
          </li>
          <li>
            Any other legal, verifiable income.
          </li>
        </ul>
      </React.Fragment>
    }
  />
  <Capsule
    buttonLabel="Add an Asset"
    expansionPanel={
      <React.Fragment>
        <div
          className="css-19cyq23"
        >
          <div
            className="css-mt9voc"
          >
            $40,000
             Total Asset Balance
          </div>
          <p
            className="css-1pqho16"
          >
            We’ll take this number into consideration in addition to or in place of income.
          </p>
        </div>
        <ExistingItemsExpansionPanel
          defaultExpanded={true}
          label="Asset"
          labelQuantity={2}
        >
          <IncomeOrAssetsItem
            source={
              Object {
                "adjusted_amount": 40020,
                "estimated_amount": 40000,
                "id": 125,
                "income_or_asset_type": 510,
                "status": 40,
                "uploaded_documents": Array [],
              }
            }
          />
          <IncomeOrAssetsItem
            source={
              Object {
                "adjusted_amount": null,
                "estimated_amount": 40000,
                "id": 125,
                "income_or_asset_type": 510,
                "status": 40,
                "uploaded_documents": Array [],
              }
            }
          />
        </ExistingItemsExpansionPanel>
      </React.Fragment>
    }
    label="Assets"
    limitReached={false}
    name="asset"
    prefix={
      <img
        alt="piggy bank"
        src="piggy-bank.png"
      />
    }
    route="/income-employment/manual/add-asset"
    tip={
      <React.Fragment>
        If no current income, proof of liquid assets (which includes bank statements with deposits) at 2.0 – 3.0 the net rent for the entire lease term is required.
      </React.Fragment>
    }
  />
  <ActionButton
    color="primary"
    disabled={false}
    marginBottom={20}
    marginTop={68}
    onClick={[Function]}
    successGreen={false}
    variant="contained"
  >
    Continue
  </ActionButton>
  <ForwardRef(WithStyles)
    classes={
      Object {
        "root": "css-rf9gj",
      }
    }
    color="primary"
    onClick={[Function]}
  >
    Start Income Verification Over
  </ForwardRef(WithStyles)>
</React.Fragment>
`;

exports[`matches snapshot with some financial sources data 1`] = `
<React.Fragment>
  <ForwardRef(render)>
    Income and Asset Verification
  </ForwardRef(render)>
  <ForwardRef(render)>
    Add at least one income source or asset below.
  </ForwardRef(render)>
  <Capsule
    buttonLabel="Add an Income Source"
    expansionPanel={
      <React.Fragment>
        <div
          className="css-19cyq23"
        >
          <div
            className="css-mt9voc"
          >
            $100,000
             Total Annual Income
          </div>
          <p
            className="css-1pqho16"
          >
            $40,000
             is the recommended household income.
            <SimplePopover
              text="It’s recommended that the yearly combined income of all applicants be 40x the monthly rent."
            >
              <UNDEFINED
                classes={
                  Object {
                    "root": "css-bmph1p",
                  }
                }
                style={
                  Object {
                    "color": "#828796",
                    "width": 16,
                  }
                }
              />
            </SimplePopover>
          </p>
        </div>
        <ExistingItemsExpansionPanel
          defaultExpanded={false}
          label="Income Source"
          labelQuantity={3}
        >
          <IncomeOrAssetsItem
            source={
              Object {
                "estimated_amount": 100000,
                "id": 123,
                "income_or_asset_type": 105,
                "uploaded_documents": Array [
                  Object {
                    "filename": "w2-1.pdf",
                    "id": 4,
                    "type": Object {
                      "id": 1,
                      "label": "W2",
                    },
                  },
                ],
              }
            }
          />
          <IncomeOrAssetsItem
            source={
              Object {
                "estimated_amount": 100000,
                "id": 124,
                "income_or_asset_type": 135,
                "uploaded_documents": Array [],
              }
            }
          />
          <IncomeOrAssetsItem
            source={
              Object {
                "estimated_amount": 100000,
                "id": 125,
                "income_or_asset_type": 500,
                "uploaded_documents": Array [
                  Object {
                    "filename": "w2-1.pdf",
                    "id": 1,
                    "type": Object {
                      "id": 1,
                      "label": "W2",
                    },
                  },
                  Object {
                    "filename": "w2-2.pdf",
                    "id": 2,
                    "type": Object {
                      "id": 1,
                      "label": "W2",
                    },
                  },
                  Object {
                    "filename": "w3.pdf",
                    "id": 3,
                    "type": Object {
                      "id": 2,
                      "label": "W3",
                    },
                  },
                ],
              }
            }
          />
        </ExistingItemsExpansionPanel>
      </React.Fragment>
    }
    label="Income"
    limitReached={false}
    name="income"
    prefix={
      <img
        alt="coin"
        src="finance.png"
      />
    }
    route="/income-employment/manual/add-income"
    tip={
      <React.Fragment>
        Proof of legal, verifiable income in an amount equal to 2.0 – 3.0 times the monthly rent per household will be required based on pre-established requirements at the property, along with any necessary supporting documents.
        <br />
        Proof of income includes, but is not limited to, the following:
        <ul>
          <li>
            Proof of current employment (e.g., three most current paystubs within the last 45 or 90 days, depending on the payment cycle);
          </li>
          <li>
            Prior year tax return;
          </li>
          <li>
            Proof of receipt of government income (e.g., social security, disability, welfare, unemployment, etc.);
          </li>
          <li>
            Proof of receipt of retirement and/or investment income;
          </li>
          <li>
            Proof of US based assets;
          </li>
          <li>
            Student loan income;
          </li>
          <li>
            Child/spousal support
          </li>
          <li>
            Any other legal, verifiable income.
          </li>
        </ul>
      </React.Fragment>
    }
  />
  <Capsule
    buttonLabel="Add an Asset"
    expansionPanel={
      <React.Fragment>
        <div
          className="css-19cyq23"
        >
          <div
            className="css-mt9voc"
          >
            $40,000
             Total Asset Balance
          </div>
          <p
            className="css-1pqho16"
          >
            We’ll take this number into consideration in addition to or in place of income.
          </p>
        </div>
        <ExistingItemsExpansionPanel
          defaultExpanded={false}
          label="Asset"
          labelQuantity={1}
        >
          <IncomeOrAssetsItem
            source={
              Object {
                "estimated_amount": 40000,
                "id": 125,
                "income_or_asset_type": 510,
                "uploaded_documents": Array [],
              }
            }
          />
        </ExistingItemsExpansionPanel>
      </React.Fragment>
    }
    label="Assets"
    limitReached={false}
    name="asset"
    prefix={
      <img
        alt="piggy bank"
        src="piggy-bank.png"
      />
    }
    route="/income-employment/manual/add-asset"
    tip={
      <React.Fragment>
        If no current income, proof of liquid assets (which includes bank statements with deposits) at 2.0 – 3.0 the net rent for the entire lease term is required.
      </React.Fragment>
    }
  />
  <ActionButton
    color="primary"
    disabled={false}
    marginBottom={20}
    marginTop={68}
    onClick={[Function]}
    successGreen={false}
    variant="contained"
  >
    Continue
  </ActionButton>
  <ForwardRef(WithStyles)
    classes={
      Object {
        "root": "css-rf9gj",
      }
    }
    color="primary"
    onClick={[Function]}
  >
    Start Income Verification Over
  </ForwardRef(WithStyles)>
</React.Fragment>
`;

exports[`matches snapshot with some financial sources data if guarantor - with warnings 1`] = `
<React.Fragment>
  <ForwardRef(render)>
    Income and Asset Verification
  </ForwardRef(render)>
  <ForwardRef(render)>
    Add at least one income source or asset below.
  </ForwardRef(render)>
  <GenericFormDetail
    messages={
      Array [
        "Oops! We found some issues with one or more of your income/assets sources.",
      ]
    }
    type="error"
  />
  <Capsule
    buttonLabel="Add an Income Source"
    expansionPanel={
      <React.Fragment>
        <div
          className="css-19cyq23"
        >
          <div
            className="css-mt9voc"
          >
            $100,000
             Total Annual Income
          </div>
          <p
            className="css-1pqho16"
          >
            $80,000
             is the required income for guarantors.
            <SimplePopover
              text="The required income for a guarantor is 80x the monthly rent"
            >
              <UNDEFINED
                classes={
                  Object {
                    "root": "css-bmph1p",
                  }
                }
                style={
                  Object {
                    "color": "#828796",
                    "width": 16,
                  }
                }
              />
            </SimplePopover>
          </p>
        </div>
        <ExistingItemsExpansionPanel
          defaultExpanded={true}
          label="Income Source"
          labelQuantity={2}
        >
          <IncomeOrAssetsItem
            source={
              Object {
                "adjusted_amount": 100020,
                "estimated_amount": 100000,
                "id": 124,
                "income_or_asset_type": 135,
                "status": 40,
                "uploaded_documents": Array [],
              }
            }
          />
          <IncomeOrAssetsItem
            source={
              Object {
                "adjusted_amount": null,
                "estimated_amount": 100000,
                "id": 124,
                "income_or_asset_type": 135,
                "status": 40,
                "uploaded_documents": Array [],
              }
            }
          />
        </ExistingItemsExpansionPanel>
      </React.Fragment>
    }
    label="Income"
    limitReached={false}
    name="income"
    prefix={
      <img
        alt="coin"
        src="finance.png"
      />
    }
    route="/income-employment/manual/add-income"
    tip={
      <React.Fragment>
        Proof of legal, verifiable income in an amount equal to 2.0 – 3.0 times the monthly rent per household will be required based on pre-established requirements at the property, along with any necessary supporting documents.
        <br />
        Proof of income includes, but is not limited to, the following:
        <ul>
          <li>
            Proof of current employment (e.g., three most current paystubs within the last 45 or 90 days, depending on the payment cycle);
          </li>
          <li>
            Prior year tax return;
          </li>
          <li>
            Proof of receipt of government income (e.g., social security, disability, welfare, unemployment, etc.);
          </li>
          <li>
            Proof of receipt of retirement and/or investment income;
          </li>
          <li>
            Proof of US based assets;
          </li>
          <li>
            Student loan income;
          </li>
          <li>
            Child/spousal support
          </li>
          <li>
            Any other legal, verifiable income.
          </li>
        </ul>
      </React.Fragment>
    }
  />
  <Capsule
    buttonLabel="Add an Asset"
    expansionPanel={
      <React.Fragment>
        <div
          className="css-19cyq23"
        >
          <div
            className="css-mt9voc"
          >
            $40,000
             Total Asset Balance
          </div>
          <p
            className="css-1pqho16"
          >
            We’ll take this number into consideration in addition to or in place of income.
          </p>
        </div>
        <ExistingItemsExpansionPanel
          defaultExpanded={true}
          label="Asset"
          labelQuantity={2}
        >
          <IncomeOrAssetsItem
            source={
              Object {
                "adjusted_amount": 40020,
                "estimated_amount": 40000,
                "id": 125,
                "income_or_asset_type": 510,
                "status": 40,
                "uploaded_documents": Array [],
              }
            }
          />
          <IncomeOrAssetsItem
            source={
              Object {
                "adjusted_amount": null,
                "estimated_amount": 40000,
                "id": 125,
                "income_or_asset_type": 510,
                "status": 40,
                "uploaded_documents": Array [],
              }
            }
          />
        </ExistingItemsExpansionPanel>
      </React.Fragment>
    }
    label="Assets"
    limitReached={false}
    name="asset"
    prefix={
      <img
        alt="piggy bank"
        src="piggy-bank.png"
      />
    }
    route="/income-employment/manual/add-asset"
    tip={
      <React.Fragment>
        If no current income, proof of liquid assets (which includes bank statements with deposits) at 2.0 – 3.0 the net rent for the entire lease term is required.
      </React.Fragment>
    }
  />
  <ActionButton
    color="primary"
    disabled={false}
    marginBottom={20}
    marginTop={68}
    onClick={[Function]}
    successGreen={false}
    variant="contained"
  >
    Continue
  </ActionButton>
  <ForwardRef(WithStyles)
    classes={
      Object {
        "root": "css-rf9gj",
      }
    }
    color="primary"
    onClick={[Function]}
  >
    Start Income Verification Over
  </ForwardRef(WithStyles)>
</React.Fragment>
`;

exports[`matches snapshot with some financial sources data if guarantor 1`] = `
<React.Fragment>
  <ForwardRef(render)>
    Income and Asset Verification
  </ForwardRef(render)>
  <ForwardRef(render)>
    Add at least one income source or asset below.
  </ForwardRef(render)>
  <Capsule
    buttonLabel="Add an Income Source"
    expansionPanel={
      <React.Fragment>
        <div
          className="css-19cyq23"
        >
          <div
            className="css-mt9voc"
          >
            $100,000
             Total Annual Income
          </div>
          <p
            className="css-1pqho16"
          >
            $80,000
             is the required income for guarantors.
            <SimplePopover
              text="The required income for a guarantor is 80x the monthly rent"
            >
              <UNDEFINED
                classes={
                  Object {
                    "root": "css-bmph1p",
                  }
                }
                style={
                  Object {
                    "color": "#828796",
                    "width": 16,
                  }
                }
              />
            </SimplePopover>
          </p>
        </div>
        <ExistingItemsExpansionPanel
          defaultExpanded={false}
          label="Income Source"
          labelQuantity={3}
        >
          <IncomeOrAssetsItem
            source={
              Object {
                "estimated_amount": 100000,
                "id": 123,
                "income_or_asset_type": 105,
                "uploaded_documents": Array [
                  Object {
                    "filename": "w2-1.pdf",
                    "id": 4,
                    "type": Object {
                      "id": 1,
                      "label": "W2",
                    },
                  },
                ],
              }
            }
          />
          <IncomeOrAssetsItem
            source={
              Object {
                "estimated_amount": 100000,
                "id": 124,
                "income_or_asset_type": 135,
                "uploaded_documents": Array [],
              }
            }
          />
          <IncomeOrAssetsItem
            source={
              Object {
                "estimated_amount": 100000,
                "id": 125,
                "income_or_asset_type": 500,
                "uploaded_documents": Array [
                  Object {
                    "filename": "w2-1.pdf",
                    "id": 1,
                    "type": Object {
                      "id": 1,
                      "label": "W2",
                    },
                  },
                  Object {
                    "filename": "w2-2.pdf",
                    "id": 2,
                    "type": Object {
                      "id": 1,
                      "label": "W2",
                    },
                  },
                  Object {
                    "filename": "w3.pdf",
                    "id": 3,
                    "type": Object {
                      "id": 2,
                      "label": "W3",
                    },
                  },
                ],
              }
            }
          />
        </ExistingItemsExpansionPanel>
      </React.Fragment>
    }
    label="Income"
    limitReached={false}
    name="income"
    prefix={
      <img
        alt="coin"
        src="finance.png"
      />
    }
    route="/income-employment/manual/add-income"
    tip={
      <React.Fragment>
        Proof of legal, verifiable income in an amount equal to 2.0 – 3.0 times the monthly rent per household will be required based on pre-established requirements at the property, along with any necessary supporting documents.
        <br />
        Proof of income includes, but is not limited to, the following:
        <ul>
          <li>
            Proof of current employment (e.g., three most current paystubs within the last 45 or 90 days, depending on the payment cycle);
          </li>
          <li>
            Prior year tax return;
          </li>
          <li>
            Proof of receipt of government income (e.g., social security, disability, welfare, unemployment, etc.);
          </li>
          <li>
            Proof of receipt of retirement and/or investment income;
          </li>
          <li>
            Proof of US based assets;
          </li>
          <li>
            Student loan income;
          </li>
          <li>
            Child/spousal support
          </li>
          <li>
            Any other legal, verifiable income.
          </li>
        </ul>
      </React.Fragment>
    }
  />
  <Capsule
    buttonLabel="Add an Asset"
    expansionPanel={
      <React.Fragment>
        <div
          className="css-19cyq23"
        >
          <div
            className="css-mt9voc"
          >
            $40,000
             Total Asset Balance
          </div>
          <p
            className="css-1pqho16"
          >
            We’ll take this number into consideration in addition to or in place of income.
          </p>
        </div>
        <ExistingItemsExpansionPanel
          defaultExpanded={false}
          label="Asset"
          labelQuantity={1}
        >
          <IncomeOrAssetsItem
            source={
              Object {
                "estimated_amount": 40000,
                "id": 125,
                "income_or_asset_type": 510,
                "uploaded_documents": Array [],
              }
            }
          />
        </ExistingItemsExpansionPanel>
      </React.Fragment>
    }
    label="Assets"
    limitReached={false}
    name="asset"
    prefix={
      <img
        alt="piggy bank"
        src="piggy-bank.png"
      />
    }
    route="/income-employment/manual/add-asset"
    tip={
      <React.Fragment>
        If no current income, proof of liquid assets (which includes bank statements with deposits) at 2.0 – 3.0 the net rent for the entire lease term is required.
      </React.Fragment>
    }
  />
  <ActionButton
    color="primary"
    disabled={false}
    marginBottom={20}
    marginTop={68}
    onClick={[Function]}
    successGreen={false}
    variant="contained"
  >
    Continue
  </ActionButton>
  <ForwardRef(WithStyles)
    classes={
      Object {
        "root": "css-rf9gj",
      }
    }
    color="primary"
    onClick={[Function]}
  >
    Start Income Verification Over
  </ForwardRef(WithStyles)>
</React.Fragment>
`;
